--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@
     justify-content: center;
     align-content: center;
     justify-items: center;
-    text-align: center
+    text-align: center;
     align-items: center;
   }
   /* .blurr{
